--- a/baseApp/src/main/res/layout/setting_schedule_activity.xml
+++ b/baseApp/src/main/res/layout/setting_schedule_activity.xml
@@ -9,43 +9,93 @@
             type="com.motor.connect.feature.setting.schedule.SettingScheduleViewModel" />
     </data>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <FrameLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header_container"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/actionbar_height"
+            android:layout_gravity="top"
+            android:background="@drawable/card_view_style"
+            android:gravity="center|left"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btn_action_left"
+                android:layout_width="36dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:onClick="onBackSettingScreen"
+                app:srcCompat="@mipmap/ic_back" />
+
+            <TextView
+                android:id="@+id/txt_title"
+                style="@style/TextView.Screen.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:gravity="center|left"
+                android:text="Cài Đặt Lich Tuoi" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/header_container"
-            android:layout_marginTop="5dp">
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_empty"
                 style="@style/TextView.Screen.Title"
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/actionbar_height"
-                android:background="@drawable/cirle_background"
                 android:gravity="center"
                 android:onClick="openEmptyScreen"
-                android:text="Chua co khu vuc duoc them vao"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/connect_text_size_36"
+                android:text="@string/setting_schedule_empty"
+                android:textColor="@color/color_blue"
+                android:textSize="@dimen/connect_text_size_30"
                 android:visibility="gone" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
+            <LinearLayout
+                android:id="@+id/setting_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:paddingBottom="@dimen/actionbar_height"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/txt_schedule_all"
+                    style="@style/TextView.Screen.Title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/bg_button_style"
+                    android:gravity="center"
+                    android:minHeight="@dimen/actionbar_height"
+                    android:onClick="openSettingAllArea"
+                    android:text="Cài dat cho tat ca khu vuc" />
 
-        </FrameLayout>
-
-    </RelativeLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:paddingTop="5dp"
+                    app:layoutManager="android.support.v7.widget.GridLayoutManager" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 
 </layout>
