--- a/baseApp/src/main/res/layout/setting_view.xml
+++ b/baseApp/src/main/res/layout/setting_view.xml
@@ -29,6 +29,7 @@
                 android:layout_height="30dp"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
+                android:onClick="gotoPreviousScreen"
                 app:srcCompat="@mipmap/ic_back" />
 
             <TextView
@@ -49,7 +50,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:gravity="top"
             android:orientation="vertical">
