--- a/baseApp/src/main/res/values/colors.xml
+++ b/baseApp/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#607D8B</color>
-    <color name="colorAccent">#E0E5E9</color>
+    <color name="colorAccent">#1BBBEE</color>
 
     <color name="transparent">#00000000</color>
 
